--- a/packages/exon/exon.cabal
+++ b/packages/exon/exon.cabal
@@ -5,7 +5,7 @@ cabal-version: 2.2
 -- see: https://github.com/sol/hpack
 
 name:           exon
-version:        0.1.0.0
+version:        0.1.1.0
 synopsis:       Monoidal Quasiquote Interpolation
 description:    See <https://hackage.haskell.org/package/exon/docs/Exon.html>
 category:       String
@@ -19,7 +19,7 @@ license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     readme.md
-    Changelog.md
+    changelog.md
 
 source-repository head
   type: git
