--- a/packages/exon/exon.cabal
+++ b/packages/exon/exon.cabal
@@ -7,19 +7,16 @@ cabal-version: 2.2
 name:           exon
 version:        0.3.0.0
 synopsis:       Monoidal Quasiquote Interpolation
-description:    See <https://hackage.haskell.org/package/exon/docs/Exon.html>
+description:    See https://hackage.haskell.org/package/exon/docs/Exon.html
 category:       String
 homepage:       https://github.com/tek/exon#readme
 bug-reports:    https://github.com/tek/exon/issues
 author:         Torsten Schmits
-maintainer:     haskell@tryp.io
-copyright:      2021 Torsten Schmits
+maintainer:     hackage@tryp.io
+copyright:      2022 Torsten Schmits
 license:        BSD-2-Clause-Patent
 license-file:   LICENSE
 build-type:     Simple
-extra-source-files:
-    readme.md
-    changelog.md
 
 source-repository head
   type: git
@@ -51,6 +48,7 @@ library
       DeriveFoldable
       DeriveFunctor
       DeriveGeneric
+      DeriveLift
       DeriveTraversable
       DerivingStrategies
       DerivingVia
@@ -83,6 +81,7 @@ library
       RankNTypes
       RecordWildCards
       RecursiveDo
+      RoleAnnotations
       ScopedTypeVariables
       StandaloneDeriving
       TemplateHaskell
@@ -95,17 +94,19 @@ library
       UndecidableInstances
       UnicodeSyntax
       ViewPatterns
-  ghc-options: -Wall -Wredundant-constraints -Wunused-type-patterns
+  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Widentities -Wunused-packages
   build-depends:
-      base ==4.*
+      base >=4.12 && <5
     , flatparse >=0.2
     , haskell-src-exts <1.24
     , haskell-src-meta <0.9
-    , incipit-base >=0.1.0.3
+    , incipit-base >=0.2
     , template-haskell
     , text
   mixins:
       base hiding (Prelude)
+    , incipit-base (IncipitBase as Prelude)
+    , incipit-base hiding (IncipitBase)
   default-language: Haskell2010
 
 test-suite exon-unit
@@ -132,6 +133,7 @@ test-suite exon-unit
       DeriveFoldable
       DeriveFunctor
       DeriveGeneric
+      DeriveLift
       DeriveTraversable
       DerivingStrategies
       DerivingVia
@@ -164,6 +166,7 @@ test-suite exon-unit
       RankNTypes
       RecordWildCards
       RecursiveDo
+      RoleAnnotations
       ScopedTypeVariables
       StandaloneDeriving
       TemplateHaskell
@@ -176,16 +179,18 @@ test-suite exon-unit
       UndecidableInstances
       UnicodeSyntax
       ViewPatterns
-  ghc-options: -Wall -Wredundant-constraints -Wunused-type-patterns -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Widentities -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base ==4.*
+      base >=4.12 && <5
     , exon
     , hedgehog
-    , incipit-base
+    , incipit-base >=0.2
     , tasty
     , tasty-hedgehog
     , template-haskell
     , text
   mixins:
       base hiding (Prelude)
+    , incipit-base (IncipitBase as Prelude)
+    , incipit-base hiding (IncipitBase)
   default-language: Haskell2010
