--- a/packages/exon/exon.cabal
+++ b/packages/exon/exon.cabal
@@ -6,7 +6,7 @@ cabal-version: 2.2
 
 name:           exon
 version:        0.5.0.0
-synopsis:       Monoidal Quasiquote Interpolation
+synopsis:       Customizable Quasiquote Interpolation
 description:    See https://hackage.haskell.org/package/exon/docs/Exon.html
 category:       String
 homepage:       https://github.com/tek/exon#readme
@@ -26,10 +26,13 @@ library
   exposed-modules:
       Exon
       Exon.Class.Exon
+      Exon.Class.Newtype
+      Exon.Class.ToSegment
       Exon.Combinators
       Exon.Data.RawSegment
       Exon.Data.Result
       Exon.Data.Segment
+      Exon.Generic
       Exon.Parse
       Exon.Quote
   hs-source-dirs:
@@ -100,11 +103,12 @@ library
   build-depends:
       base >=4.12 && <5
     , flatparse >=0.3.5.1
+    , generics-sop
     , haskell-src-exts <1.24
     , haskell-src-meta <0.9
     , incipit-base >=0.2
     , template-haskell
-    , text
+    , type-errors-pretty
   mixins:
       base hiding (Prelude)
     , incipit-base (IncipitBase as Prelude)
@@ -116,9 +120,11 @@ test-suite exon-unit
   main-is: Main.hs
   other-modules:
       Exon.Test.BasicTest
-      Exon.Test.KeepWsTest
+      Exon.Test.BuildTest
+      Exon.Test.NewtypeTest
       Exon.Test.Quote
       Exon.Test.ShowsPrecTest
+      Exon.Test.SkipWsTest
   hs-source-dirs:
       test
   default-extensions:
@@ -192,7 +198,85 @@ test-suite exon-unit
     , tasty
     , tasty-hedgehog
     , template-haskell
-    , text
+  mixins:
+      base hiding (Prelude)
+    , incipit-base (IncipitBase as Prelude)
+    , incipit-base hiding (IncipitBase)
+  default-language: Haskell2010
+
+benchmark exon-bench
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs:
+      benchmark
+  default-extensions:
+      AllowAmbiguousTypes
+      ApplicativeDo
+      BangPatterns
+      BinaryLiterals
+      BlockArguments
+      ConstraintKinds
+      DataKinds
+      DefaultSignatures
+      DeriveAnyClass
+      DeriveDataTypeable
+      DeriveFoldable
+      DeriveFunctor
+      DeriveGeneric
+      DeriveLift
+      DeriveTraversable
+      DerivingStrategies
+      DerivingVia
+      DisambiguateRecordFields
+      DoAndIfThenElse
+      DuplicateRecordFields
+      EmptyCase
+      EmptyDataDecls
+      ExistentialQuantification
+      FlexibleContexts
+      FlexibleInstances
+      FunctionalDependencies
+      GADTs
+      GeneralizedNewtypeDeriving
+      InstanceSigs
+      KindSignatures
+      LambdaCase
+      LiberalTypeSynonyms
+      MultiParamTypeClasses
+      MultiWayIf
+      NamedFieldPuns
+      OverloadedLabels
+      OverloadedLists
+      OverloadedStrings
+      PackageImports
+      PartialTypeSignatures
+      PatternGuards
+      PatternSynonyms
+      PolyKinds
+      QuantifiedConstraints
+      QuasiQuotes
+      RankNTypes
+      RecordWildCards
+      RecursiveDo
+      RoleAnnotations
+      ScopedTypeVariables
+      StandaloneDeriving
+      TemplateHaskell
+      TupleSections
+      TypeApplications
+      TypeFamilies
+      TypeFamilyDependencies
+      TypeOperators
+      TypeSynonymInstances
+      UndecidableInstances
+      UnicodeSyntax
+      ViewPatterns
+  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Widentities -Wunused-packages
+  build-depends:
+      base >=4.12 && <5
+    , criterion
+    , exon
+    , incipit-base >=0.2
   mixins:
       base hiding (Prelude)
     , incipit-base (IncipitBase as Prelude)
