move SkipWs and intron to a dedicated file

--- a/packages/exon/exon.cabal
+++ b/packages/exon/exon.cabal
@@ -38,6 +38,7 @@ library
       Exon.Generic
       Exon.Parse
       Exon.Quote
+      Exon.SkipWs
   hs-source-dirs:
       lib
   default-extensions:
