--- a/packages/exon/exon.cabal
+++ b/packages/exon/exon.cabal
@@ -195,7 +195,7 @@ benchmark exon-bench
   ghc-options: -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
   build-depends:
       base ==4.*
-    , criterion ==1.6.*
+    , criterion >=1.5 && <1.7
     , exon
     , incipit-base >=0.4 && <0.6
   mixins:
