--- a/packages/exon/exon.cabal
+++ b/packages/exon/exon.cabal
@@ -143,9 +143,9 @@ test-suite exon-test
   build-depends:
       base ==4.*
     , exon
-    , hedgehog >=1.1 && <1.3
+    , hedgehog >=1.1 && <1.5
     , incipit-base >=0.4 && <0.6
-    , tasty ==1.4.*
+    , tasty >=1.4 && <1.6
     , tasty-hedgehog >=1.3 && <1.5
     , template-haskell
   mixins:
