--- a/packages/exon/exon.cabal
+++ b/packages/exon/exon.cabal
@@ -59,6 +59,7 @@ library
       GADTs
       LambdaCase
       LiberalTypeSynonyms
+      MonadComprehensions
       MultiWayIf
       OverloadedLabels
       OverloadedLists
@@ -83,7 +84,7 @@ library
   build-depends:
       base ==4.*
     , ghc
-    , incipit-base >=0.4 && <0.6
+    , incipit-base >=0.4 && <0.7
     , parsec
     , template-haskell
   mixins:
@@ -120,6 +121,7 @@ test-suite exon-test
       GADTs
       LambdaCase
       LiberalTypeSynonyms
+      MonadComprehensions
       MultiWayIf
       OverloadedLabels
       OverloadedLists
@@ -145,7 +147,7 @@ test-suite exon-test
       base ==4.*
     , exon
     , hedgehog >=1.1 && <1.5
-    , incipit-base >=0.4 && <0.6
+    , incipit-base >=0.4 && <0.7
     , tasty >=1.4 && <1.6
     , tasty-hedgehog >=1.3 && <1.5
     , template-haskell
@@ -175,6 +177,7 @@ benchmark exon-bench
       GADTs
       LambdaCase
       LiberalTypeSynonyms
+      MonadComprehensions
       MultiWayIf
       OverloadedLabels
       OverloadedLists
@@ -200,7 +203,7 @@ benchmark exon-bench
       base ==4.*
     , criterion >=1.5 && <1.7
     , exon
-    , incipit-base >=0.4 && <0.6
+    , incipit-base >=0.4 && <0.7
   mixins:
       base hiding (Prelude)
     , incipit-base (IncipitBase as Prelude)
