--- a/packages/exon/exon.cabal
+++ b/packages/exon/exon.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.35.2.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -82,11 +82,11 @@ library
       NoFieldSelectors
   ghc-options: -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
   build-depends:
-      base ==4.*
-    , ghc
-    , incipit-base >=0.4 && <0.7
-    , parsec
-    , template-haskell
+      base >=4.16.4.0 && <4.20
+    , ghc >=9.2.8 && <9.9
+    , incipit-base >=0.5.0.0 && <0.7
+    , parsec >=3.1.15.0 && <3.2
+    , template-haskell >=2.18.0.0 && <2.22
   mixins:
       base hiding (Prelude)
     , incipit-base (IncipitBase as Prelude)
@@ -144,13 +144,13 @@ test-suite exon-test
       NoFieldSelectors
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
   build-depends:
-      base ==4.*
+      base >=4.16.4.0 && <4.20
     , exon
     , hedgehog >=1.1 && <1.5
-    , incipit-base >=0.4 && <0.7
-    , tasty >=1.4 && <1.6
-    , tasty-hedgehog >=1.3 && <1.5
-    , template-haskell
+    , incipit-base >=0.5.0.0 && <0.7
+    , tasty >=1.4.0.3 && <1.5
+    , tasty-hedgehog >=1.1.0.0 && <1.5
+    , template-haskell >=2.18.0.0 && <2.22
   mixins:
       base hiding (Prelude)
     , incipit-base (IncipitBase as Prelude)
@@ -200,10 +200,10 @@ benchmark exon-bench
       NoFieldSelectors
   ghc-options: -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
   build-depends:
-      base ==4.*
-    , criterion >=1.5 && <1.7
+      base >=4.16.4.0 && <4.20
+    , criterion >=1.5.11.0 && <1.7
     , exon
-    , incipit-base >=0.4 && <0.7
+    , incipit-base >=0.5.0.0 && <0.7
   mixins:
       base hiding (Prelude)
     , incipit-base (IncipitBase as Prelude)
