--- a/packages/exon/exon.cabal
+++ b/packages/exon/exon.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.35.2.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -82,9 +82,9 @@ library
       NoFieldSelectors
   ghc-options: -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
   build-depends:
-      base ==4.*
+      base
     , ghc
-    , incipit-base >=0.4 && <0.7
+    , incipit-base
     , parsec
     , template-haskell
   mixins:
@@ -144,12 +144,12 @@ test-suite exon-test
       NoFieldSelectors
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
   build-depends:
-      base ==4.*
+      base
     , exon
-    , hedgehog >=1.1 && <1.5
-    , incipit-base >=0.4 && <0.7
-    , tasty >=1.4 && <1.6
-    , tasty-hedgehog >=1.3 && <1.5
+    , hedgehog
+    , incipit-base
+    , tasty
+    , tasty-hedgehog
     , template-haskell
   mixins:
       base hiding (Prelude)
@@ -200,10 +200,10 @@ benchmark exon-bench
       NoFieldSelectors
   ghc-options: -Wall -Widentities -Wincomplete-uni-patterns -Wmissing-deriving-strategies -Wredundant-constraints -Wunused-type-patterns -Wunused-packages
   build-depends:
-      base ==4.*
-    , criterion >=1.5 && <1.7
+      base
+    , criterion
     , exon
-    , incipit-base >=0.4 && <0.7
+    , incipit-base
   mixins:
       base hiding (Prelude)
     , incipit-base (IncipitBase as Prelude)
