workaround for broken .#lower

--- a/.github/workflows/lower.yaml
+++ b/.github/workflows/lower.yaml
@@ -18,7 +18,7 @@ jobs:
         name: tek
         signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
     - id: bounds
-      run: nix run .#lower -- --output=ga-pr --build-timeout=3600
+      run: nix run .#lower.auto -- --output=ga-pr --build-timeout=3600
     - name: pr
       if: steps.bounds.outputs.commit-message
       uses: peter-evans/create-pull-request@v7
