--- a/.github/workflows/lower.yaml
+++ b/.github/workflows/lower.yaml
@@ -1,9 +1,15 @@
 name: lower
-on: [workflow_dispatch, pull_request, push]
+
+on:
+  push:
+    branches: [main]
+  workflow_dispatch:
+
 permissions:
   contents: write
   pull-requests: write
   id-token: write
+
 jobs:
   lower-pr:
     runs-on: ubuntu-latest
